<resources>
    <string name="app_name">XYO SDK Sample</string>
    <string name="title_ble_client">BLE Client</string>
    <string name="title_ble_server">BLE Server</string>
    <string name="title_tcpip_client">TcpIp Client</string>
    <string name="title_tcpip_server">TcpIp Server</string>
    <string name="auto_bound_witness">Auto BoundWitness</string>
    <string name="auto_bridge">Auto Bridge</string>
    <string name="accept_bridging">Accept Bridging</string>
    <string name="scan">Scan</string>
    <string name="listen">Listen</string>
    <string name="public_key">Public Key: </string>
    <string name="detected_devices">Detected Devices:</string>
    <string name="detected_xyo_devices">Detected XYO Devices:</string>
    <string name="nearby_xyo_devices">Nearby XYO Devices:</string>
    <string name="bound_witness_results">Bound Witness Results:</string>
</resources>
