<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Switch
        android:padding="8dp"
        android:id="@+id/autoBoundWitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_bound_witness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Switch>
    <Switch
        android:padding="8dp"
        android:id="@+id/acceptBridging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_bridging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoBoundWitness">
    </Switch>
    <Switch
        android:padding="8dp"
        android:id="@+id/autoBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_bridging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acceptBridging">
    </Switch>
    <Switch
        android:padding="8dp"
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoBridge">
    </Switch>
    <TextView
        android:padding="8dp"
        android:id="@+id/text_ble_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoBridge" />
</androidx.constraintlayout.widget.ConstraintLayout>